--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -22,6 +22,13 @@
   color: #61dafb;
 }
 
+.task--list__item {
+  text-align: center;
+  width: 80%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
