タスク追加画面と詳細画面少し

--- a/react-app/src/task/task.css
+++ b/react-app/src/task/task.css
@@ -20,3 +20,14 @@
   width: 20%;
   text-align: center;
 }
+
+.add-task-table {
+  width: 100%;
+}
+
+.add-task-td-genre {
+  min-width: 120px !important;
+}
+.add-task-td-priority {
+  min-width: 120px !important;
+}
