--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -33,6 +33,14 @@
   margin-bottom: 5px;
 }
 
+.error-message {
+  color: red;
+}
+
+.task-memo-field {
+  width: 250px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
